--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ body {
 
 @media (max-width: 600px) {
   .wrapper {
-    width: 100%;
-    padding: 10px;
+    width: fit-content;
+    padding: 20px;
     box-shadow: none;
     margin: 0;
   }
